AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4

pkglib_LTLIBRARIES = libuseless.la

libuseless_la_SOURCES = e_useless.c

# Override some variables for the examples, this is NOT necessary
pkgdatadir = /usr/share/engine-corner
pkgexecdir = /usr/share/engine-corner/libexec
pkgincludedir = /usr/share/engine-corner/include
pkglibdir = /usr/share/engine-corner/lib
